--- a/webserver.yml
+++ b/webserver.yml
@@ -6,7 +6,7 @@
   remote_user: root
   tasks:
   - name: subscribe to rht
-    script: /root/rhsm.sh
+    command: /root/rhsm.sh
   - name: ensure apache is at the latest version
     yum: pkg=httpd state=latest
   - name: write the apache config file
